--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,12 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# celery beat schedule file
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -123,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea/
+*.zip
+*.pth
+results/
+models/
+logs/
+datasets/
